[project]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = "Fetch PubMed research papers with non-academic author affiliations"
authors = [
    {name = "Tushar Bhat", email = "bhattushar2010@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "requests>=2.32.3,<3.0.0",
    "pandas>=2.2.3,<3.0.0",
    "lxml>=5.3.1,<6.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "pubmed_paper_fetcher.cli:main"
